Added global exception handling and tested things with mockoon with Api profile